[package]
name = "edu_ex"
version = "0.1.0"
edition = "2021"


[dependencies]
ask_gemini = "0.1.4"
reqwest = {version = "0.12.7", features = ["json"]}
scraper = "0.20.0"
serde = {version = "1.0.209", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.127"
tokio ={version="1.39.3",features = ["full", "macros"]}
